Updated API flow and improved backend modules